--- a/Configuration/Iconpack/Helium.yaml
+++ b/Configuration/Iconpack/Helium.yaml
@@ -5,129 +5,23 @@ iconpack:
   url: "https://tympanus.net/codrops/2014/10/10/freebie-helium-icon-set/"
 
   renderTypes:
+
+    _default:
+      prefix: "hi-"
+
     webfont:
       css: "EXT:iconpack_helium/Resources/Public/Vendor/helium/css/webfont.css"
-      prefix: "hi-"
       attributes:
         class: "helium"
         aria-hidden: "true"
 
     svg:
       source: "EXT:iconpack_helium/Resources/Public/Vendor/helium/svgs/"
+
+    svgInline:
+      source: "EXT:iconpack_helium/Resources/Public/Vendor/helium/svgs/"
       attributes:
         fill: "currentColor"
+        role: "img"
 
-  icons:
-    - zip
-    - camera
-    - texttool
-    - text
-    - table
-    - presentation
-    - design
-    - web
-    - gamepad
-    - calculator
-    - keyboard
-    - desktop
-    - mobile
-    - mouse
-    - watch
-    - printer
-    - arrow
-    - coding
-    - quote
-    - trash
-    - magnet
-    - ruller
-    - crop
-    - magic
-    - brush
-    - pentool
-    - hand
-    - picture
-    - icecream
-    - pizza
-    - cocktail
-    - doughnut
-    - burger
-    - coffee
-    - chicken
-    - minimize
-    - maximize
-    - stop
-    - forwards
-    - backwards
-    - pause
-    - play
-    - webcam
-    - cc
-    - hd
-    - bell
-    - playlist
-    - refresh
-    - random
-    - mic
-    - volumeoff
-    - volumeon
-    - equalizer
-    - video
-    - headphones
-    - music
-    - ring
-    - diamond
-    - crown
-    - cup
-    - medal
-    - flash
-    - rocket
-    - hanger
-    - pants
-    - glasses
-    - sox
-    - hat
-    - tie
-    - tshirt
-    - home
-    - confirm
-    - delete
-    - plus
-    - next
-    - back
-    - list
-    - menu
-    - diagram
-    - eye
-    - download
-    - upload
-    - compass
-    - rating
-    - notepad
-    - document
-    - settings
-    - boy
-    - girl
-    - folder
-    - group
-    - pin
-    - smile
-    - send
-    - timer
-    - edit
-    - cart
-    - key
-    - share
-    - lock
-    - unlock
-    - present
-    - message
-    - about
-    - flag
-    - exit
-    - lamp
-    - calendar
-    - search
-    - star
-    - heart
-    - unlike
-    - like
+  icons: "EXT:iconpack_helium/Resources/Public/Vendor/helium/metadata/icons.yml"
