--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -2,17 +2,18 @@
 
 project = Iconpack: Helium Icons
 description = This Extension registers an Iconpack-Provider for EXT:iconpack which allows you to use the "Helium Icons" in TYPO3.
-version = 1.0
-release = 1.0.4
-t3author = Quellenform
+version = main (development)
+release = main (development)
+author = Quellenform
 copyright = since 2020 by Quellenform & contributors
 
 [html_theme_options]
 
-github_branch = main
-github_repository = quellenform/t3x-iconpack-helium
-path_to_documentation_dir = /
-project_repository = https://github.com/quellenform/t3x-iconpack-helium
+# "Edit on GitHub" button
+github_repository    = quellenform/t3x-iconpack-helium
+github_branch        = main
 
-# Show as related links
-project_issues = https://github.com/quellenform/t3x-iconpack-helium/issues
+# Footer links
+project_home         = https://github.com/quellenform/t3x-iconpack-helium
+project_repository   = https://github.com/quellenform/t3x-iconpack-helium
+project_issues       = https://github.com/quellenform/t3x-iconpack-helium/issues
